[tool.poetry]
name = "yubikey-totp"
version = "0.1.0"
description = "Tool for generating TOTP codes using YubiKey"
authors = ["Mikhail Zhuk <michail.zhuk@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynput = "^1.7.6"
yubikey-manager = "^5.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
